--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority
 NODE_ENV=development
+MONGODB_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority
 
 # Admin Authentication
 ADMIN_USERNAME=jonson
