--- a/client/vite-project/.env.production
+++ b/client/vite-project/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://tipsdaniel.onrender.com:10000 
+VITE_API_URL=https://tipsdaniel.onrender.com:10000
+VITE_BASE_URL=https://tipsdaniel-client-static.onrender.com 
