--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,8 @@
 PORT=5000
-MONGO_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
-MONGODB_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority
-
-# Admin Authentication
-ADMIN_USERNAME=jonson
-ADMIN_PASSWORD=3333
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
 
 # Client URL
 CLIENT_URL=http://localhost:5173
