--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://tipsdaniel01:tipstipstips063@cluster0.0ggqwbt.mongodb.net/TipsDanielBlog?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+ADMIN_USERNAME=jonson
+ADMIN_PASSWORD=3333
 
 # Client URL
 CLIENT_URL=http://localhost:5173
