--- a/server/.env.production
+++ b/server/.env.production
@@ -13,7 +13,7 @@ ADMIN_PASSWORD=your_secure_password
 JWT_SECRET=your_jwt_secret_key
 
 # CORS Configuration
-CORS_ORIGIN=https://tipsdaniel.onrender.com
+CORS_ORIGIN=https://tipsdaniel-client-static.onrender.com
 
 # Client URL
-CLIENT_URL=https://tipsdaniel.onrender.com 
+CLIENT_URL=https://tipsdaniel-client-static.onrender.com 
