--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
   },
@@ -25,4 +26,4 @@
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.0"
   }
-} 
+}
