--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
